rally: Add rally to setup-openstack.yml

--- a/playbooks/setup-openstack.yml
+++ b/playbooks/setup-openstack.yml
@@ -39,4 +39,5 @@
 - include: os-sahara-install.yml
 - include: os-tempest-install.yml
   when: (tempest_install | default(False)) | bool or (tempest_run | default(False)) | bool
-
+- include: os-rally-install.yml
+  when: (rally_install | default(False)) | bool or (rally_run | default(False)) | bool
